--- a/Codename CHOMPS/Codename CHOMPS-Info.plist
+++ b/Codename CHOMPS/Codename CHOMPS-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>CHOMPS</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
@@ -16,8 +16,8 @@
 			<array>
 				<string>new_icon57.png</string>
 				<string>new_icon114.png</string>
-				<string>chomps_icon57.png</string>
-				<string>chomps_icon114.png</string>
+				<string>finalIcon114.png</string>
+				<string>finalIcon57.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<true/>
@@ -28,7 +28,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>CHOMPS</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -50,8 +50,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
